# ai-agent-boilerplate

./: .gitignore  BLUEPRINT.md  README.md  RULES.md  pyproject.toml
asterism/: api_server.py
asterism/agent/: __init__.py  agent.py  prompt_loader.py
asterism/agent/graph_builders/: __init__.py  base.py  full_graph.py  streaming_graph.py
asterism/agent/models/: __init__.py  schemas.py
asterism/agent/nodes/: __init__.py  evaluator.py  executor.py  finalizer.py  planner.py
asterism/agent/nodes/evaluator/: __init__.py  node.py  prompt_builder.py  prompts.py  router.py  service.py  task_resolver.py  utils.py
asterism/agent/nodes/executor/: __init__.py  llm_runner.py  mcp_runner.py  node.py  task_runner.py  utils.py
asterism/agent/nodes/finalizer/: __init__.py  node.py  prompts.py  response_builder.py  utils.py
asterism/agent/nodes/planner/: __init__.py  context.py  node.py  prompts.py  service.py  utils.py
asterism/agent/nodes/shared/: __init__.py  context_extractors.py  llm_caller.py  (+3 more)
asterism/agent/state/: __init__.py  agent_state.py
asterism/agent/utils/: __init__.py  logging_utils.py  workspace_tree.py
asterism/api/: __init__.py  dependencies.py  exceptions.py  main.py  models.py
asterism/api/routes/: __init__.py  chat.py  health.py  models.py
asterism/api/services/: __init__.py  agent_service.py  streaming.py
asterism/config/: __init__.py  config.py
asterism/core/: __init__.py  prompt_loader.py
asterism/llm/: __init__.py  base.py  exceptions.py  factory.py  openai_provider.py  provider_router.py
asterism/mcp/: config.py  executor.py
external_resources/mcp_servers/code_parser_mcp/: pyproject.toml
external_resources/mcp_servers/code_parser_mcp/code_parser_mcp/: __init__.py  server.py
external_resources/mcp_servers/filesystem_mcp/: pyproject.toml
external_resources/mcp_servers/filesystem_mcp/filesystem_mcp/: __init__.py  server.py
external_resources/mcp_servers/localtime_mcp/: Dockerfile  pyproject.toml  readme.md  run_http_stream.sh  run_sse.sh  stop_http_stream.sh  stop_sse.sh
external_resources/mcp_servers/localtime_mcp/localtime_mcp/: server.py
src/agent/: graph.py  state.py
src/agent/llm/: openai_provider.py
src/agent/mcp/: config.py  executor.py
src/agent/nodes/: architect.py  auditor.py  executor.py  refiner.py  router.py
src/agent/utils/: __init__.py  skill_loader.py  tool_parser.py
tests/: conftest.py
tests/agent/: conftest.py
tests/agent/llm/: __init__.py  test_openai_provider.py
tests/agent/mcp/: test_config.py  test_executor.py
tests/agent/nodes/: conftest.py  test_architect.py  test_auditor.py  test_executor.py  test_refiner.py  test_router.py
tests/agent/utils/: __init__.py  test_skill_loader.py  test_tool_parser.py
tests/integration_tests/: conftest.py  test_agent.py
tests/integration_tests/llm/: conftest.py  test_openai_provider.py
tests/integration_tests/transport_executor/: conftest.py  test_http_stream.py  test_sse.py  test_stdio.py
tests/unit/agent/: conftest.py  test_agent.py  test_nodes.py  test_prompt_loader.py
tests/unit/mcp/: test_config.py
workspace/: AGENT.md  PERSONALITY.md  SOUL.md
workspace-default/: config.yaml
workspace/mcp_servers/: mcp_servers.json
(+15 files in other folders)
