[project]
name = "asterism"
version = "0.1.0"
description = "Asterism agentic beings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.14.4",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.32.0",
]


[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    ".venv",          # ignore virtual env
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # E,F = errors, I = isort (imports), UP = pyupgrade
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [""]
log_cli = true
log_level = "INFO"
