[project]
name = "code-parser-mcp-server"
version = "0.1.0"
description = "Code Parser MCP Server - Provides Python code analysis tools"
authors = [{name = "AI Agent Boilerplate"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp<3",
]

[project.scripts]
code-parser-mcp-server = "code_parser_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"