[project]
name = "filesystem-mcp-server"
version = "0.1.0"
description = "Filesystem MCP Server - Provides file system operations"
authors = [{name = "AI Agent Boilerplate"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp<3",
]

[project.scripts]
filesystem-mcp-server = "filesystem_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"