[project]
name = "localtime-mcp"
version = "0.1.0"
description = "Simple MCP server that returns current local time"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
localtime-mcp = "localtime_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["localtime_mcp"]
